# docomo-api

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html
src/: lib.rs
src/docomo_api/: chat_dialogue.rs  mod.rs
